Added color coding and multiple reminder support

--- a/todo.txt
+++ b/todo.txt
@@ -1,4 +1,4 @@
  - sync and compare the time stored in Reminder to real time DONE
- - add ability to add multiple reminders
+ - add ability to add multiple reminders DONE
  - add OS-wide popup notifications
  - add a basic gui
